--- a/indexabout.html
+++ b/indexabout.html
@@ -28,7 +28,7 @@
 <nav>
     <div id="navi">
         <ul class="navi1">
-            <li class="navi2"><a href="#">Text</a></li>
+            <li class="navi2"><a href="#">Home</a></li>
             <li class="navi2"><a href="#">Text</a></li>
             <li class="navi2"><a href="#">Text</a></li>
             <li class="navi2"><a href="#">Text</a></li>
