--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
             <div class="fbox2">
                 <form id="contus">
                     <h1>TEXT</h1>
+             
                     <input type="text" name="name" placeholder="TEXT">
                     <input type="email" name="email" placeholder="TEXT">
+                    <input type="number" name="number" placeholder="NUM">
                     <textarea name="textarea" placeholder="TEXT"></textarea>
                     <input type="submit" name="submit" value="Submit">
                     <input type="reset" name="reset" value="Reset">
@@ -96,7 +98,8 @@
             <li class="foot1"><a href="indexcontact.html">Contact Us</a></li>
           </ul>
           <div class="res">
-          <p>&copy; All rights reserved.</p></div>
+          <p>&copy; All rights reserved.
+         </p></div>
         </div>
       </footer>
       
