Updated the navigation bar

--- a/indexabout.html
+++ b/indexabout.html
@@ -32,8 +32,8 @@
             <li class="navi2"><a href="#">Text</a></li>
             <li class="navi2"><a href="#">Text</a></li>
             <li class="navi2"><a href="#">Text</a></li>
-            <li class="navi2"><a href="#">Text</a></li>
-            <li class="navileft2"><a href="#">Text</a></li>
+            <li class="navileft2"><a href="#">About Us</a></li>
+            <li class="navileft2"><a href="#">Contact Us</a></li>
         </ul>
     </div>
 </nav>
