Adding drop down list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <nav>
         <div id="navi">
             <ul class="navi1">
-                <li class="navi2"><a href="index.html">Home</a></li>
+                <li class="navi2" id="Homee"><a href="index.html">Home</a>
+                 <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                </li>
                 <li class="navi2"><a href="#">Text</a></li>
                 <li class="navi2"><a href="#">Text</a></li>
                 <li class="navi2"><a href="#">Text</a></li>
